--- a/package.json
+++ b/package.json
@@ -22,25 +22,31 @@
     }
   },
   "dependencies": {
-    "@babel/polyfill": "^7.10.1",
-    "@sentry/browser": "^5.17.0",
+    "@babel/polyfill": "7.12.1",
+    "@ionic/core": "^5.6.3",
+    "@ionic/react": "^5.6.3",
+    "@sentry/browser": "6.2.5",
     "backbone": "^1.3.3",
-    "backbone.localstorage": "^1.1.16",
+    "backbone.localstorage": "2.1.0",
     "backbone.marionette": "3.0.0",
     "backbone.radio": "^2.0.0",
-    "cordova": "^9.0.0",
-    "core-js": "^3.6.5",
+    "cordova": "10.0.0",
+    "core-js": "3.10.0",
     "fastclick": "^1.0.3",
     "geodesy": "^2.2.1",
     "hammerjs": "^2.0.8",
     "indicia": "github:Indicia-Team/indicia-js#v4.2.5",
-    "jquery": "^3.5.1",
+    "jquery": "3.6.0",
     "jquery-touchswipe": "^1.6.15",
-    "localforage": "^1.7.4",
+    "localforage": "1.9.0",
     "localforage-cordovasqlitedriver": "^1.5.0",
-    "lodash": "^4.17.15",
+    "lodash": "4.17.21",
     "photoswipe": "^4.1.1",
+    "prop-types": "^15.7.2",
+    "prop-types-exact": "^1.2.0",
     "ratchet": "github:twbs/ratchet#v2.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "regenerator-runtime": "^0.13.7",
     "typeahead.js": "github:twitter/typeahead.js#v0.11.1"
   },
@@ -137,6 +143,7 @@
             "./src"
           ],
           "alias": {
+            "@apps": "./src/common/appsBitCollection",
             "radio": "./src/common/radio",
             "typeahead": "typeahead.js/dist/typeahead.jquery",
             "bootstrap": "bootstrap/js/bootstrap",
@@ -191,6 +198,8 @@
       "react/jsx-filename-extension": 0,
       "jest/no-done-callback": 0,
       "jest/expect-expect": 0,
+      "jsx-a11y/anchor-is-valid": 0,
+      "jsx-a11y/anchor-has-content": 0,
       "jest/valid-expect": 0
     },
     "globals": {
