--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.12.1",
+    "@bit/flumens.apps.helpers.alert": "^0.4.2",
     "@ionic/core": "^5.6.3",
     "@ionic/react": "^5.6.3",
     "@sentry/browser": "6.2.5",
