--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   "dependencies": {
     "@babel/polyfill": "7.12.1",
     "@bit/flumens.apps.helpers.alert": "^0.4.2",
+    "@bit/flumens.apps.utils.analytics": "^0.2.0",
     "@ionic/core": "^5.6.3",
     "@ionic/react": "^5.6.3",
-    "@sentry/browser": "6.2.5",
     "backbone": "^1.3.3",
     "backbone.localstorage": "2.1.0",
     "backbone.marionette": "3.0.0",
