--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
   "dependencies": {
     "@babel/polyfill": "7.12.1",
     "@bit/flumens.apps.helpers.alert": "^0.4.2",
+    "@bit/flumens.apps.helpers.toast": "^0.2.0",
+    "@bit/flumens.apps.info-message": "^1.2.1",
+    "@bit/flumens.apps.main": "^0.2.0",
+    "@bit/flumens.apps.toggle": "^0.1.0",
     "@bit/flumens.apps.utils.analytics": "^0.2.0",
     "@ionic/core": "^5.6.3",
     "@ionic/react": "^5.6.3",
@@ -32,17 +36,21 @@
     "backbone.localstorage": "2.1.0",
     "backbone.marionette": "3.0.0",
     "backbone.radio": "^2.0.0",
+    "clsx": "^1.1.1",
     "cordova": "^9.0.0",
     "core-js": "3.10.0",
     "fastclick": "^1.0.3",
     "geodesy": "^2.2.1",
     "hammerjs": "^2.0.8",
     "indicia": "github:Indicia-Team/indicia-js#v4.2.5",
+    "ionicons": "^5.5.1",
     "jquery": "3.6.0",
     "jquery-touchswipe": "^1.6.15",
     "localforage": "1.9.0",
     "localforage-cordovasqlitedriver": "^1.5.0",
     "lodash": "4.17.21",
+    "mobx": "^6.1.8",
+    "mobx-react": "^7.1.0",
     "photoswipe": "^4.1.1",
     "prop-types": "^15.7.2",
     "prop-types-exact": "^1.2.0",
