--- a/package.json
+++ b/package.json
@@ -203,6 +203,7 @@
       }
     },
     "rules": {
+      "jsx-a11y/label-has-associated-control": 0,
       "no-case-declarations": 0,
       "jsx-a11y/accessible-emoji": 0,
       "@getify/proper-arrows/name": 0,
