--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "make:species": "cd src/common/data && tsx make.ts"
   },
   "dependencies": {
+    "@capacitor-community/sqlite": "^6.0.2",
     "@capacitor/android": "^6.1.2",
     "@capacitor/app": "6.0.1",
     "@capacitor/camera": "^6.0.2",
@@ -34,8 +35,10 @@
     "@capacitor/splash-screen": "6.0.2",
     "@capacitor/status-bar": "6.0.1",
     "@flumens/bigu": "0.4.0",
-    "@flumens/ionic": "2.0.0-alpha.64.1",
-    "@flumens/tailwind": "0.17.2",
+    "@flumens/ionic": "2.0.0-alpha.66",
+    "@flumens/models": "0.2.0",
+    "@flumens/tailwind": "0.19.2",
+    "@flumens/utils": "^0.0.2",
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
     "@ionic-native/core": "5.36.0",
@@ -48,8 +51,10 @@
     "clsx": "^2.1.1",
     "cordova-sqlite-storage": "6.1.0",
     "deep-diff": "1.0.2",
+    "drizzle-orm": "^0.34.1",
     "i18next": "^23.15.1",
     "ionicons": "^7.4.0",
+    "jeep-sqlite": "^2.8.0",
     "jwt-decode": "^4.0.0",
     "localforage": "1.10.0",
     "localforage-cordovasqlitedriver": "1.8.0",
@@ -65,6 +70,7 @@
     "react-i18next": "^15.0.2",
     "react-router": "5.3.4",
     "react-router-dom": "5.3.4",
+    "sql.js": "^1.11.0",
     "swiper": "^11.1.14",
     "tailwind-variants": "^0.2.1",
     "yup": "^1.4.0",
@@ -92,6 +98,7 @@
     "@types/react-router-dom": "5.3.3",
     "babel-jest": "29.7.0",
     "babel-plugin-module-resolver": "5.0.2",
+    "copy-webpack-plugin": "^12.0.2",
     "cordova-res": "0.15.4",
     "dotenv": "16.4.5",
     "eslint": "8.57.0",
